fixed grippy z-index for cient dragging (req by unibe)
svn path=/ZMS/trunk/; revision=3490

--- a/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -273,6 +273,7 @@ div.grippy {
 	overflow: hidden;
 	position: absolute;
 	left:0;
+	z-index:100;
 }
 .zmi-item.ui-sortable-helper {
 	box-shadow:2px 5px 8px #ccc;
